--- a/src/app/pages/singupcust/singupcust.page.html
+++ b/src/app/pages/singupcust/singupcust.page.html
@@ -19,11 +19,11 @@
       <h5 class="country">kasi food hub</h5>
       <ion-item>
         <ion-label position="floating">First Name</ion-label>
-        <ion-input></ion-input>
+        <ion-input ngModel #name = "ngModel" [(ngModel)]="userData.name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Last Name</ion-label>
-        <ion-input></ion-input>
+        <ion-input ngModel #surname = "ngModel" [(ngModel)]="userData.surname" type= "text"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Gender</ion-label>
@@ -34,19 +34,19 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Cellphone number</ion-label>
-        <ion-input></ion-input>
+        <ion-input ngModel #cell_no = "ngModel" [(ngModel)]="userData.cell_no" type="number"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label  position="floating">Password</ion-label>
-        <ion-input type= "password"></ion-input>
+        <ion-input ngModel #password ="ngModel" [(ngModel)]="userData.password" type ="password"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label  position="floating">Confirm Password</ion-label>
-        <ion-input type= "password"></ion-input>
+        <ion-input ngModel #password ="ngModel" [(ngModel)]="userData.cpassword" type ="password"></ion-input>
       </ion-item>
       
     </div>
-    <ion-button shape="round" (click)="goHome()">Register</ion-button>
+    <ion-button shape="round" (click)="registerEnter()" >Register</ion-button>
     <ion-button shape = "round" (click)= "backButton()">Cancel</ion-button>
   
   </div>
