--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           <ion-item (click)="openProfile()">Profile</ion-item> 
           <ion-item (click)="openAddMenu()">Add to Menu</ion-item>
           <ion-item (click)="openOverview()">Overview</ion-item>
-          <ion-item (click)="openmenu()">Add to Menu</ion-item>
+          <ion-item (click)="openMenu()">Add to Menu</ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
