--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -28,6 +28,7 @@
     </div>
   
     <ion-button expand="full" type='submit' color="success" (click)="signin()">Log in</ion-button>
+    <ion-button expand="full" type='submit' color="danger" (click)="signin()">forgot password</ion-button>
   </div>
 </ion-content>
 
