--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -1,30 +1,33 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
-    <ion-icon name="arrow-black" (click)="backButton()"></ion-icon>
-    <ion-title>Vendor</ion-title>
+    <ion-icon name="arrow-back-outline" (click)="backButton()"></ion-icon>
+    <ion-title >Vendor Application</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
-  <div class="card">
+  
+  <!-- <div class="card">
     <div class="header">
       <div class="avatar">
         <img src="/assets/images/kfh6.png" alt="profile">
       </div>
     </div>
-  </div>
-  <div class="card-body">
+  </div> -->
+  <!-- <div class="card-body">
     <div class="user-meta ion-text-center">
       <h3 class="playername">Welcome</h3>
-      <h5 class="country">kasi food hub</h5>
+      <h5 class="country">kasi food hub</h5>  -->
       <ion-item>
         <ion-label position="floating">First Name</ion-label>
         <ion-input></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating">Last Name</ion-label>
         <ion-input></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label>Gender</ion-label>
         <ion-select placeholder="Select One">
@@ -32,20 +35,23 @@
           <ion-select-option value="m">Male</ion-select-option>
         </ion-select>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating">Cellphone number</ion-label>
         <ion-input></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating" >email Address</ion-label>
         <ion-input type = "email"></ion-input>
       </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Address</ion-label>
-        <ion-input placeholder="Address Line 1"></ion-input>
-        <ion-input placeholder="Address Line 2"></ion-input>
+
+     <ion-item>
+        <ion-label position="floating">Address</ion-label>
+        <ion-input placeholder="Street Address"></ion-input>
+        <ion-input placeholder="Suburb"></ion-input>
         <ion-input placeholder="City"></ion-input>
-        <ion-input placeholder="State"></ion-input>
+        <ion-input placeholder="Province"></ion-input>
         <ion-input placeholder="Zip Code"></ion-input>
       </ion-item>
     
@@ -53,14 +59,16 @@
         <ion-label  position="floating">Password</ion-label>
         <ion-input type= "password"></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label  position="floating">Confirm Password</ion-label>
         <ion-input type= "password"></ion-input>
       </ion-item>
+    <!-- </div>  -->
+    <div>
+      <ion-button color = "success" shape="round" (click)="goHome()">Register</ion-button>
+      <ion-button color = "danger" shape = "round" (click)= "backButton()">Cancel</ion-button>
     </div>
-    <ion-button shape="round" (click)="goHome()">Register</ion-button>
-    <ion-button shape = "round" (click)= "backButton()">Cancel</ion-button>
-  
-  </div>
+  <!-- </div> -->
   
 </ion-content>
