--- a/src/app/pages/extras/extras.page.html
+++ b/src/app/pages/extras/extras.page.html
@@ -1,7 +1,8 @@
 
 <ion-content padding>
   
-  
+  <ion-item-group [ngSwitch]="addSegment">
+    <ion-list *ngSwitchCase="">
   <div class="ion-text-end" *ngFor="let p of ext" >
   
     <ion-button (click)="close()" (click)="removeExtraItem(p)" fill="clear" color="dark">
@@ -10,7 +11,7 @@
   
 
   <ion-item>
-    <b>{{p.name}}</b>
+    <b>{{p.item_name}}</b>
   </ion-item>
 
   <ion-list>
@@ -54,4 +55,6 @@
       <ion-button expand="full" (click)="addExtra(extra)"  (click)="removeExtraItem(p)" (click)="addToCart(p)" (click)="close()">Add to Cart</ion-button>
  </div>
 </div>
+</ion-list>
+</ion-item-group>
 </ion-content>
