--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -10,41 +10,41 @@
   <div>
     {{value}}
   </div>
-  <div class="ion-padding">
+  <div class="ion-padding" *ngFor="let c of cart">
     <ion-list>
       <ion-card>
-      <ion-item *ngFor="let p of cart" class="ion-text-wrap">
+      <ion-item class="ion-text-wrap">
         <ion-grid>
           <ion-row class="ion-align-items-center">
             <ion-col size="2" class="ion-align-self-center">
-              <ion-button color="medium" fill="clear" (click)="decreaseCartItem(p)">
+              <ion-button color="medium" fill="clear" (click)="decreaseCartItem(c)">
                 <ion-icon name="remove-circle" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
 
             <ion-col size="1" class="ion-align-self-center">
-              {{p.amount}}
+              {{c.amount}}
             </ion-col>
 
             <ion-col size="2" class="ion-align-self-center">
-              <ion-button color="medium" fill="clear" (click)="increaseCartItem(p)">
+              <ion-button color="medium" fill="clear" (click)="increaseCartItem(c)">
                 <ion-icon name="add-circle" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
 
             <ion-col size="2" offset="5">
               
-              <ion-button color="medium" fill="clear" (click)="removeCartItem(p)">
+              <ion-button color="medium" fill="clear" (click)="removeCartItem(c)">
                 <ion-icon name="trash"></ion-icon>
               </ion-button>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col size="9">
-              <b>{{ p.name }}</b>
+              <b>{{ c.item_name }}</b>
             </ion-col>
             <ion-col size="3" class="ion-text-end">
-              {{ p.amount * p.price | currency:'R'}}
+              {{ c.amount * c.item_price | currency:'R'}}
             </ion-col>
           </ion-row>
           <ion-row *ngFor="let e of ext">
@@ -56,10 +56,10 @@
       <ion-item>
         <ion-row>
           <ion-col color="tertiary" ><b>Total</b>
-            {{getTotal() | currency:'R'}}</ion-col>
+            {{getTotal() | currency:'R'}}</ion-col> 
         </ion-row>
       </ion-item>
     </ion-list>
-    <ion-button id="check" expand="full" (click)="checkout()" (click)="close()">Checkout</ion-button>
+    <ion-button id="check" expand="full" (click)="checkoutProduct(c)" (click)="checkout()" (click)="close()">Checkout</ion-button>
   </div>
 </ion-content>
