--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -57,15 +57,17 @@
         <ion-card-title>{{p.item_name}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-row class="ion-align-items-center">
+        <ion-row>
           <ion-col size="8">
+            <ion-label color="primary">
+              <b>{{p.item_description}}</b>
+            </ion-label>
+          </ion-col>
+          <ion-col size="12" class="ion-text-right">
             <ion-label color="secondary">
               <b>{{p.item_price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
-          <!--<ion-col size="4" class="ion-text-right">
-            <ion-button (click)="addToCart(p)">add</ion-button>
-          </ion-col>-->
         </ion-row>
       </ion-card-content>
      </ion-card>
