--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -69,23 +69,27 @@
     <ion-title>
       Restaurant Admin
     </ion-title>
+    
     <ion-buttons slot="start">
-      <ion-menu-button autoHide="false"></ion-menu-button>
-      
+      <ion-menu-button autoHide="false"></ion-menu-button>      
     </ion-buttons>
+
+    <ion-buttons collapse="true" slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<<<<<<< HEAD
+<ion-content color = "dark">
 
   <ion-router-outlet id="main"></ion-router-outlet>
-=======
 
   <ion-router-outlet id="main"></ion-router-outlet>
-  <ion-button (click)="openProfile()">prof</ion-button>
 
-  <ion-menu side="start" menuId="first" contentId="main">
+  <!-- <ion-menu side="start" menuId="first" contentId="main">
     <ion-header>
       <ion-toolbar color="dark">
         <ion-title>Menu</ion-title>
@@ -98,13 +102,12 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-router-outlet id="main"></ion-router-outlet> -->
 
-  <button  (click)="openEnd()" >///</button>
->>>>>>> a3d6e2fca4b55626cc0020150470910a4374dc2a
+
 
   <div class="ion-padding">
-    <ion-card>
+    <ion-card color = "light">
       <ion-card-header>
         Menu Item Demands per month
       </ion-card-header>
@@ -113,18 +116,18 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card color = "light">
       <ion-card-header>
-        Doughnut Chart
+        Head to Head comparisons
       </ion-card-header>
       <ion-card-content>
         <canvas #doughnutCanvas></canvas>
       </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card color = "light">
       <ion-card-header>
-        Line Chart
+        Annual Business Performance
       </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
