--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -21,7 +21,7 @@
   </ion-card>
   <ion-card class="card">
     <ion-card-title>Jay's Eatery</ion-card-title>
-    <img src = 'assets/images/logo3.jpg' style = "width: 100;height: 60;">
+    <img src = 'assets/images/logo4.jpeg' style = "width: 100;height: 60;">
     <ion-button expand="block" color = 'success' class="butn" (click)="thirdOrder()">View menu</ion-button>
   </ion-card> 
 </ion-content>
