--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,7 +20,7 @@
       Kasi Food Hub
     </ion-title>
     
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-menu-button autoHide="false"></ion-menu-button>      
     </ion-buttons>
 
@@ -28,7 +28,7 @@
       <ion-button>
         <ion-icon slot="icon-only" name="add-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
     </ion-toolbar>
     <ion-grid>
       <ion-col>
