--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -6,18 +6,6 @@
 </ion-header>
 
 <ion-content >
-  
-  <!-- <div class="card">
-    <div class="header">
-      <div class="avatar">
-        <img src="/assets/images/kfh6.png" alt="profile">
-      </div>
-    </div>
-  </div> -->
-  <!-- <div class="card-body">
-    <div class="user-meta ion-text-center">
-      <h3 class="playername">Welcome</h3>
-      <h5 class="country">kasi food hub</h5>  -->
       <ion-item>
         <ion-label position="floating">First Name</ion-label>
         <ion-input></ion-input>
@@ -42,13 +30,14 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating" >email Address</ion-label>
+        <ion-label position="floating" >Email Address</ion-label>
         <ion-input type = "email"></ion-input>
       </ion-item>
 
      <ion-item>
         <ion-label position="floating">Address</ion-label>
-        <ion-input placeholder="Street Address"></ion-input>
+        <ion-input placeholder="Plot Number"></ion-input>
+        <ion-input placeholder = "Street Name"></ion-input>
         <ion-input placeholder="Suburb"></ion-input>
         <ion-input placeholder="City"></ion-input>
         <ion-input placeholder="Province"></ion-input>
@@ -63,6 +52,18 @@
       <ion-item>
         <ion-label  position="floating">Confirm Password</ion-label>
         <ion-input type= "password"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-item>
+          Is delivery available ?  
+          <ion-toggle color="success"></ion-toggle>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label position="fixed">Attachments</ion-label>
+          <label class="control-label small" for="file_img">(jpg/pdf):</label> <input type="file" name="file_img">
+        </ion-item>
       </ion-item>
     <!-- </div>  -->
     <div>
