--- a/src/app/pages/super-admin/super-admin.page.html
+++ b/src/app/pages/super-admin/super-admin.page.html
@@ -1,4 +1,8 @@
-<!-- Segment with secondary color -->
+<ion-toolbar color = "dark">SUPER ADMIN</ion-toolbar>
+<ion-header></ion-header>
+
+<ion-content>
+ <!-- Segment with secondary color -->
 <ion-segment (ionChange)="segmentChanged($event)" color="dark">
   <ion-segment-button value="standard">
     <ion-label>Chart View</ion-label>
@@ -10,3 +14,4 @@
     <ion-label>Customer Section</ion-label>
   </ion-segment-button>
 </ion-segment>
+</ion-content>
