--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,6 +38,16 @@ ion-content{
     background: #555;
   }
   
+  .header a{
+
+    position: 100%;
+    padding: 2px 20px;
+    width: 100rem 300rem;
+    padding-right: 30px;
+    top: 30px;
+    left: 10px;
+    
+  }
   .header h1 {
     position: relative;
     top: 18px;
