--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
     <div class="header ">
-    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon> <br>
-    <a href="/home">home</a>
-    <a href="/restaurant">home</a>
-    <a href="/signin">SignIn</a>
+    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
+    <a href="/home">Home</a>
+    <a href="/restaurants">Resturant</a>
+    <a href="/signin">Sign-in</a>
   </div>
     <!--ion-avatar>
     <img src="assets/images/kfh6.png" alt="logo" />
