--- a/src/app/pages/super-admin/super-admin.page.html
+++ b/src/app/pages/super-admin/super-admin.page.html
@@ -1,5 +1,5 @@
 <ion-header no-header>
-  <ion-toolbar>
+  <ion-toolbar color = "dark">
     <ion-segment mod = "md" [(ngModel)]="segment" (ionChange)="segmentChanged($event)">
       <ion-segment-button value = "0">
         <ion-icon name="pie-chart-outline"></ion-icon>
@@ -8,7 +8,7 @@
 
       <ion-segment-button value = "1">
         <ion-icon name="restaurant-outline"></ion-icon>
-        Restaurant Vendors
+        Vendors
       </ion-segment-button>
 
       <ion-segment-button value = "2">
@@ -26,20 +26,20 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src=""></ion-col>
+          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
-          <ion-col><h1>Mobiles</h1></ion-col>
+          <ion-col><h1>Charts</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>iPhone 11 with FaceTime</label>
             <label price>SAR 2350.00</label>
           </ion-col>
           
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>Galaxy Note10+ Dual SIM Aura Black 256GB 12GB RAM 4G LTE</label>
             <label price>SAR 1699.00</label>
           </ion-col>
@@ -52,20 +52,20 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src=""></ion-col>
+          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
           <ion-col><h1>Watches</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>Men's Stainless Steel Analog/Digital Quartz Watch AEQ-1008W-9A</label>
             <label price>SAR 198.00</label>
           </ion-col>
           
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>Men's 4-Piece Gift Set</label>
             <label price>SAR 177.00</label>
           </ion-col>
@@ -78,20 +78,20 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src=""></ion-col>
+          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
           <ion-col><h1>Headphones</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>QuietComfort 35 Series II Wireless Headphones Black</label>
             <label price>SAR 999.00</label>
           </ion-col>
           
           <ion-col>
-            <img src=""/>
+            <img src="/src/assets/images/iphone.jpg"/>
             <label>Over-Ear Wireless Headphones with Mic Red</label>
             <label price>SAR 358.00</label>
           </ion-col>
