--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -7,46 +7,28 @@
 
 <ion-content >
       <ion-item>
-        <ion-label position="floating">First Name</ion-label>
+        <ion-label position="floating" name = "restuarant_name">Restuarant Name</ion-label>
         <ion-input></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Last Name</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Gender</ion-label>
-        <ion-select placeholder="Select One">
-          <ion-select-option value="f">Female</ion-select-option>
-          <ion-select-option value="m">Male</ion-select-option>
-        </ion-select>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Cellphone number</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating" >Email Address</ion-label>
+        <ion-label position="floating" name = "email_address">Email Address</ion-label>
         <ion-input type = "email"></ion-input>
       </ion-item>
 
      <ion-item>
         <ion-label position="floating">Address</ion-label>
-        <ion-input placeholder="Plot Number"></ion-input>
-        <ion-input placeholder = "Street Name"></ion-input>
-        <ion-input placeholder="Suburb"></ion-input>
-        <ion-input placeholder="City"></ion-input>
-        <ion-input placeholder="Province"></ion-input>
-        <ion-input placeholder="Zip Code"></ion-input>
+        <ion-input placeholder="Plot Number" name = "Plot_number"></ion-input>
+        <ion-input placeholder = "Street Name" name = "Street_name"></ion-input>
+        <ion-input placeholder="Suburb" name = "Suburb"></ion-input>
+        <ion-input placeholder="City" name = "City"></ion-input>
+        <ion-input placeholder="Province" name = "Province"></ion-input>
+        <ion-input placeholder="Zip Code" name = "Zip_code"></ion-input>
       </ion-item>
     
       <ion-item>
         <ion-label  position="floating">Password</ion-label>
-        <ion-input type= "password"></ion-input>
+        <ion-input type= "password" name = "pass_word"></ion-input>
       </ion-item>
 
       <ion-item>
@@ -57,7 +39,9 @@
       <ion-item>
         <ion-item>
           Is delivery available ?  
-          <ion-toggle color="success"></ion-toggle>
+          <ion-toggle [(ngModel)] ="isDeliever" color="success"></ion-toggle>
+          <p *ngIf="isDeliever" name = "delieYes">Active</p>
+          <p *ngIf="!isDeliever" name = "delieNo">Inactive</p>
         </ion-item>
         
         <ion-item>
