--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -43,8 +43,8 @@
         <ion-item>
           Is delivery available ?  
           <ion-toggle [(ngModel)] ="isDeliever" color="success"></ion-toggle>
-          <p *ngIf="isDeliever" name = "delieYes">Active</p>
-          <p *ngIf="!isDeliever" name = "delieNo">Inactive</p>
+          <p *ngIf="isDeliever" name = "isDeliever">Active</p>
+          <p *ngIf="!isDeliever" name = "isDeliever">Inactive</p>
         </ion-item>
         
         <ion-item>
