--- a/src/app/pages/admin-login/admin-login.page.html
+++ b/src/app/pages/admin-login/admin-login.page.html
@@ -21,7 +21,7 @@
                     </ion-item>
                   </div>
                   <div class="ion-padding">
-                    <ion-button block  (click)="signIn()">Login</ion-button>
+                    <ion-button block  (click)="checkEmail()">Login</ion-button>
                   </div>
                 </ion-col>
               </ion-row>
