--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -52,6 +52,17 @@
         <canvas #lineCanvas></canvas>
       </ion-card-content>
     </ion-card>
+    <ion-grid>
+      <ion-row>
+        <ion-col align-self-center>
+           <ion-button [routerLink]="['/add-remove-admin']" expanded="block" color="primary">Add Admin</ion-button>
+            <!--<span class="divider line one-line">or</span>
+             <span class="already">Already a user?</span>
+             <ion-button [routerLink]="['/Login']" expand="block" color="danager">Sign In</ion-button>-->
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  
   </div>
 
  </ion-content>
