--- a/src/app/pages/add-remove-admin/add-remove-admin.page.html
+++ b/src/app/pages/add-remove-admin/add-remove-admin.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-        <ion-back-button></ion-back-button>
+        <ion-back-button> </ion-back-button>
     </ion-buttons>
     <ion-title>Add Admin</ion-title>
   </ion-toolbar>
@@ -26,7 +26,7 @@
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="warning" expand="block">Add Admin</ion-button>
+        <ion-button type="submit" color="danger" expand="block">Add Admin</ion-button>
       </ion-col>
     </ion-row>
   </form>
