super admin conn

--- a/src/app/pages/super-admin/super-admin.page.html
+++ b/src/app/pages/super-admin/super-admin.page.html
@@ -26,23 +26,30 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
+          <ion-col><img src="assets/images/iphone.jpg"></ion-col>
         </ion-row>
+        <ion-card-header>
         <ion-row>
           <ion-col><h1>Charts</h1></ion-col>
         </ion-row>
+
+        </ion-card-header>
         <ion-row>
-          <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+          <ion-card-subtitle> 
+         <ion-col>
+            <img src="assets/images/iphone.jpg"/>
             <label>iPhone 11 with FaceTime</label>
             <label price>SAR 2350.00</label>
           </ion-col>
-          
+        </ion-card-subtitle>
+
+      <ion-card-subtitle>
           <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+            <img src = "assets/images/iphone.jpg"/>
             <label>Galaxy Note10+ Dual SIM Aura Black 256GB 12GB RAM 4G LTE</label>
             <label price>SAR 1699.00</label>
           </ion-col>
+        </ion-card-subtitle>
         </ion-row>
       </ion-grid>
 
@@ -52,20 +59,20 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
+          <ion-col><img src = "assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
           <ion-col><h1>Watches</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+            <img src = "assets/images/iphone.jpg"/>
             <label>Men's Stainless Steel Analog/Digital Quartz Watch AEQ-1008W-9A</label>
             <label price>SAR 198.00</label>
           </ion-col>
           
           <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+            <img src = "assets/images/iphone.jpg"/>
             <label>Men's 4-Piece Gift Set</label>
             <label price>SAR 177.00</label>
           </ion-col>
@@ -78,20 +85,20 @@
 
       <ion-grid>
         <ion-row>
-          <ion-col><img src="/src/assets/images/iphone.jpg"></ion-col>
+          <ion-col><img src = "assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
           <ion-col><h1>Headphones</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+            <img src = "assets/images/iphone.jpg"/>
             <label>QuietComfort 35 Series II Wireless Headphones Black</label>
             <label price>SAR 999.00</label>
           </ion-col>
           
           <ion-col>
-            <img src="/src/assets/images/iphone.jpg"/>
+            <img src = "assets/images/iphone.jpg"/>
             <label>Over-Ear Wireless Headphones with Mic Red</label>
             <label price>SAR 358.00</label>
           </ion-col>
