--- a/src/app/pages/super-admin/super-admin.page.html
+++ b/src/app/pages/super-admin/super-admin.page.html
@@ -26,12 +26,28 @@
 
       <ion-grid>
         <ion-row>
+          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1,1,1,1,1,1,1,1,1,1]; let i = index">
+           
+            <ion-card>
+              <ion-img src="assets/images/iphone.jpg"></ion-img>
+              <ion-card-content>
+                <ion-card-title>Lorem</ion-card-title>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laboriosam.</p>
+              </ion-card-content>
+            </ion-card>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <!-- <ion-grid>
+        <ion-row>
           <ion-col><img src="assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-card-header>
-        <ion-row>
-          <ion-col><h1>Charts</h1></ion-col>
-        </ion-row>
+          <ion-row>
+            <ion-col><h1>Charts</h1></ion-col>
+          </ion-row>
 
         </ion-card-header>
         <ion-row>
@@ -51,14 +67,14 @@
           </ion-col>
         </ion-card-subtitle>
         </ion-row>
-      </ion-grid>
+      </ion-grid> -->
 
     </ion-slide>
 
     <ion-slide>
 
       <ion-grid>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col><img src = "assets/images/iphone.jpg"></ion-col>
         </ion-row>
         <ion-row>
@@ -76,7 +92,45 @@
             <label>Men's 4-Piece Gift Set</label>
             <label price>SAR 177.00</label>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>Lorem</ion-card-title>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laboriosam.</p>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card>
+          <ion-card-content>
+            <div class="ion-padding">
+              <p> <a href=""><h1>Vendor Applications Received</h1></a></p>
+            </div>
+
+            <ion-list>
+              <ion-item-sliding *ngFor="let item of [1,1,1,1,1,1,1,1,1,1]; let i = index">
+                <ion-item >
+                  <ion-label>Detail of vendor applicant</ion-label>
+                </ion-item>
+                <ion-item-options side="start"(ionSwipe)="test()">
+                  <ion-item-option (click)="unread()" expandable>Update</ion-item-option>
+                  <ion-item-option color = "danger" (click) = "delete()">Reject</ion-item-option>
+                  <ion-item-option color = "success" (click) = "test()">Accept</ion-item-option>
+                  <ion-item-option shape= "round" color = "dark" (click) = "delete()"><ion-icon name="trash">Delete</ion-icon></ion-item-option>
+                </ion-item-options>
+              </ion-item-sliding>
+
+              <ion-item-sliding>
+                <ion-item>
+                  <ion-label>Detail of vendor applicant</ion-label>
+                </ion-item>
+                <ion-item-options side="end" (ionSwipe)="delete()">
+                  
+                  
+                </ion-item-options>
+              </ion-item-sliding>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
       </ion-grid>
 
     </ion-slide>
