--- a/src/app/pages/super-admin/super-admin.page.scss
+++ b/src/app/pages/super-admin/super-admin.page.scss
@@ -32,3 +32,15 @@ label {
 .segment-button-checked{
     background: #345f1a38;
 }
+
+.cards {
+
+    ion-card{
+
+        height: 8 00px;
+        width: 1000px;
+
+    }
+
+
+}
