--- a/src/app/pages/add-remove-admin/add-remove-admin.page.html
+++ b/src/app/pages/add-remove-admin/add-remove-admin.page.html
@@ -1,33 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-        <ion-back-button> </ion-back-button>
-    </ion-buttons>
     <ion-title>Add Admin</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <form>
     <ion-item lines="full">
-      <ion-label position="floating" color:>User Name</ion-label>
+      <ion-label position="floating">First name</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
+
     <ion-item lines="full">
-      <ion-label position="floating">Password</ion-label>
+      <ion-label position="floating">Restaurants</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
+
     <ion-item lines="full">
-      <ion-label position="floating">Full Name</ion-label>
+      <ion-label position="floating">Email</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Phone</ion-label>
+      <ion-input type="text" required></ion-input>
+    </ion-item>
+
     <ion-item lines="full">
       <ion-label position="floating">Address</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
+
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Add Admin</ion-button>
+        <ion-button type="submit" color="primary" expand="block">Add Admin</ion-button>
       </ion-col>
     </ion-row>
   </form>
+
 </ion-content>
