--- a/src/app/pages/add-remove-admin/add-remove-admin.page.html
+++ b/src/app/pages/add-remove-admin/add-remove-admin.page.html
@@ -33,7 +33,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="primary" expand="block">Add Admin</ion-button>
+        <ion-button type="submit" color="primary" expand="block" (click)="addAdmin()">Add Admin</ion-button>
       </ion-col>
     </ion-row>
   </form>
