--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,128 +1,211 @@
-<ion-header>
-  <!--ion-toolbar color = 'warning'>
-    <div class="header ">
-    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon> <br>
-    <a href="/home">home</a>
-    
-    <a href="/signin">SignIn</a>
-    <ion-col><a href="/restaurant">home</a></ion-col>
-  </div>
-    <ion-avatar>
-    <img src="assets/images/kfh6.png" alt="logo" />
-  </ion-avatar>
-      <ion-title>Kasi Food Hub</ion-title>
-      <ion-searchbar [(ngModel)] = "searchTerm" (ionInput)= "setFilteredItems()"></ion-searchbar-->
-    
-    
-  
+<ion-header> 
   <ion-toolbar color = "warning" >
     <ion-title>
       Kasi Food Hub
     </ion-title>
     
-    <!-- <ion-buttons slot="start">
-      <ion-menu-button autoHide="false"></ion-menu-button>      
-    </ion-buttons>
+  </ion-toolbar>
+      <ion-col>
+        <ion-icon name="menu-sharp" (click)="presentActionSheet()"></ion-icon>
+      </ion-col>
+  <ion-searchbar [(ngModel)] = "searchTerm"></ion-searchbar>
 
-    <ion-buttons collapse="true" slot="end">
-      <ion-button>
-        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons> -->
-    </ion-toolbar>
-    <ion-grid>
-      <ion-col>
-        <ion-icon name="home" (click)="presentActionSheet()"></ion-icon>
-      </ion-col>
-      <ion-col>
-          <ion-icon name="person" (click)="presentActionSheet()"></ion-icon>
-      </ion-col>
-   </ion-grid>
-    <ion-searchbar [(ngModel)] = "searchTerm" (ionInput)= "setFilteredItems()"></ion-searchbar>
 </ion-header>
 
-<ion-content padding class="content-color">
-  <!--ion-list>
-    <ion-item *ngFor="let data of jsonData">
-        {{data.item_name}}
-    </ion-item>
-   </ion-list-->
-
-  <!--ion-card class="card-body"-->
-    
-    <!--this is the slides you will see on the home page-->
-    <!--ion-slides  pager #mySlider1 class="slides" (ionSlidesDidLoad)="slidesDidLoad(mySlider1)">
-
-      <ion-slide >
-        <img src = 'assets/images/kfh6.png'  class="pics" alt="kasi logo"/>
-        
-      </ion-slide>
-    
-      <ion-slide>
-        <img src = 'assets/images/Advertisement/ad2.jpg' class="pics" alt="kasi logo"/>
-        
-      </ion-slide>
-    
-      <ion-slide >
-        <img src = 'assets/images/Advertisement/menatlana.jpg' class="pics" alt="kasi logo"/>
-        
-      </ion-slide>
-      <ion-slide >
-        <img src = 'https://specsonline.com/wp-content/uploads/2019/01/Mobile-Deli-Page-Slider-600x200.jpg' class="pics" alt="kasi logo"/>
-        
-      </ion-slide>
-      <ion-slide >
-        <img src = 'https://www.findtakeaways.co.za/images/Specials/Chesa_Nyama_Family_Special.JPG'class="pics" alt="kasi logo"/>
-        
-      </ion-slide>
-    
-    </ion-slides-->
-  <!--/ion-card-->
+<ion-content>
   
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content> 
+  </ion-refresher>
+
   <!--Restaurants picture with the view button-->
-  <ion-card class="card" >
-    <ion-card-title>Resturants</ion-card-title>
-    <img class= "pics" src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg'>
-    <div  *ngFor = "let a of adminData">
-      <ion-title>{{a.id}}</ion-title>
+  <ion-card class="card">
+    <ion-card-title>Restaurants</ion-card-title>
+    <ion-card-content>
+      
+      <!-- Data to display after skeleton screen -->
+    <div *ngIf="data">
+      <div class="ion-padding"></div>
+
+        <ion-list>
+    <ion-list-header>
+      <ion-label>
+        List of Available Restaurants
+      </ion-label>
+    </ion-list-header>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/food2.jpg">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/logo3.jpg">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/food1.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/food1.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/food1.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/images/food1.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          {{ data.heading }}
+        </h3>
+        <p>
+          {{ data.para1 }}
+        </p>
+        <p>
+          {{ data.para2 }}
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</div>
+
+<!-- Skeleton screen -->
+<div *ngIf="!data">
+  <div class="ion-padding custom-skeleton">
+    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+    <ion-skeleton-text animated></ion-skeleton-text>
+    <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
+    <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
   </div>
-    <ion-button expand="block" color = 'success'  (click)="gotoRest()">View all Restaurant</ion-button>
+
+  <ion-list>
+    <ion-list-header>
+      <ion-label>
+        <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
+      </ion-label>
+    </ion-list-header>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-skeleton-text animated style="width: 27px; height: 27px" slot="start"></ion-skeleton-text>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</div>
+    </ion-card-content>
   </ion-card>
 
-  <!--Daily Deals ,where you will see the advertisement and also special from the restaurant-->
-  <ion-card class="card-body">
-    <ion-card-title>Daily Deals</ion-card-title>
-    <ion-slides pager #mySlider class="slides " (ionSlidesDidLoad)="slidesDidLoad(mySlider)">
-      <ion-slide style="background-color: grey" >
-        <ion-card >
-          <img class = "pics" src='https://specsonline.com/wp-content/uploads/2019/01/Mobile-Deli-Page-Slider-600x200.jpg'>
-        </ion-card>
-      </ion-slide>
-      
-      <ion-slide style="background-color: grey">
-        <ion-card>
-          <img class = "pics" src='https://www.findtakeaways.co.za/images/Specials/Chesa_Nyama_Family_Special.JPG'>
-        </ion-card>
-      </ion-slide>
+    <!-- Data to display after skeleton screen -->
 
-      <ion-slide style="background-color: grey" >
-        <ion-card >
-          <img class = "pics" src='assets/images/Advertisement/ad2.jpg'>
-        </ion-card>
-      </ion-slide>
 
-      <ion-slide style="background-color: grey" >
-        <ion-card >
-          <img class = "pics" src='assets/images/Advertisement/menatlana.jpg'>
-        </ion-card>
-      </ion-slide>
 
-      <ion-slide style="background-color: grey" >
-        <ion-card >
-          <img src='https://specsonline.com/wp-content/uploads/2019/01/Mobile-Deli-Page-Slider-600x200.jpg'>
-        </ion-card>
-      </ion-slide>
-
-    </ion-slides>   
-</ion-card>
-</ion-content>
+ </ion-content>
