--- a/src/app/pages/super-admin/super-admin.page.html
+++ b/src/app/pages/super-admin/super-admin.page.html
@@ -26,21 +26,7 @@
 
       <!-- <ion-grid>
         <ion-row>
-<<<<<<< HEAD
           <ion-col><img src="assets/images/iphone.jpg"></ion-col>
-=======
-          <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1,1,1,1,1,1,1,1,1,1]; let i = index">
-           
-            <ion-card>
-              <ion-img src="assets/images/iphone.jpg"></ion-img>
-              <ion-card-content>
-                <ion-card-title>Lorem</ion-card-title>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laboriosam.</p>
-              </ion-card-content>
-            </ion-card>
-
-          </ion-col>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
         </ion-row>
       </ion-grid> -->
 
@@ -52,7 +38,7 @@
         <div class = "cards">
           <ion-card  >
             <ion-card-header>
-              Bar Chart
+              Restaurants most ordered from:
             </ion-card-header>
             <ion-card-content>
               <canvas #barCanvas></canvas>
@@ -61,7 +47,7 @@
       
           <ion-card>
             <ion-card-header>
-              Doughnut Chart
+              Most ordered food menu
             </ion-card-header>
             <ion-card-content>
               <canvas #doughnutCanvas></canvas>
@@ -70,93 +56,24 @@
       
           <ion-card>
             <ion-card-header>
-              Line Chart
+              Number of Users
             </ion-card-header>
             <ion-card-content>
               <canvas #lineCanvas></canvas>
             </ion-card-content>
           </ion-card>
         </div>
-      
-
-      <!-- <ion-grid>
-        <ion-row>
-          <ion-col><img src="assets/images/iphone.jpg"></ion-col>
-        </ion-row>
-        <ion-card-header>
-          <ion-row>
-            <ion-col><h1>Charts</h1></ion-col>
-          </ion-row>
-
-        </ion-card-header>
-        <ion-row>
-<<<<<<< HEAD
-          <ion-col>
-=======
-          <ion-card-subtitle> 
-         <ion-col>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <img src="assets/images/iphone.jpg"/>
-            <label>iPhone 11 with FaceTime</label>
-            <label price>SAR 2350.00</label>
-          </ion-col>
-        </ion-card-subtitle>
-
-      <ion-card-subtitle>
-          <ion-col>
-<<<<<<< HEAD
-            <img src="assets/images/iphone.jpg"/>
-=======
-            <img src = "assets/images/iphone.jpg"/>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <label>Galaxy Note10+ Dual SIM Aura Black 256GB 12GB RAM 4G LTE</label>
-            <label price>SAR 1699.00</label>
-          </ion-col>
-        </ion-card-subtitle>
-        </ion-row>
-      </ion-grid> -->
 
     </ion-slide>
 
     <ion-slide>
 
       <ion-grid>
-<<<<<<< HEAD
-        <ion-row>
-          <ion-col><img src="assets/images/iphone.jpg"></ion-col>
-=======
-        <!-- <ion-row>
-          <ion-col><img src = "assets/images/iphone.jpg"></ion-col>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-        </ion-row>
-        <ion-row>
-          <ion-col><h1>Watches</h1></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-<<<<<<< HEAD
-            <img src="assets/images/iphone.jpg"/>
-=======
-            <img src = "assets/images/iphone.jpg"/>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <label>Men's Stainless Steel Analog/Digital Quartz Watch AEQ-1008W-9A</label>
-            <label price>SAR 198.00</label>
-          </ion-col>
-          
-          <ion-col>
-<<<<<<< HEAD
-            <img src="assets/images/iphone.jpg"/>
-=======
-            <img src = "assets/images/iphone.jpg"/>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <label>Men's 4-Piece Gift Set</label>
-            <label price>SAR 177.00</label>
-          </ion-col>
-        </ion-row> -->
+       
         <ion-card>
           <ion-card-content>
-            <ion-card-title>Lorem</ion-card-title>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, laboriosam.</p>
+            <ion-card-title>Welcome to Super Admin Dashboard</ion-card-title>
+            <p>This screen is swipeable left and right.</p>
           </ion-card-content>
         </ion-card>
 
@@ -199,34 +116,22 @@
 
       <ion-grid>
         <ion-row>
-<<<<<<< HEAD
-          <ion-col><img src="assets/images/iphone.jpg"></ion-col>
-=======
-          <ion-col><img src = "assets/images/iphone.jpg"></ion-col>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
+          <ion-col><img src="assets/images/food6.jpg"></ion-col>
         </ion-row>
         <ion-row>
-          <ion-col><h1>Headphones</h1></ion-col>
+          <ion-col><h1>Delicious Dish</h1></ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-<<<<<<< HEAD
-            <img src="assets/images/iphone.jpg"/>
-=======
-            <img src = "assets/images/iphone.jpg"/>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <label>QuietComfort 35 Series II Wireless Headphones Black</label>
-            <label price>SAR 999.00</label>
+            <img src="assets/images/food2.jpg"/>
+            <label>QuietComfort Southern Style</label>
+            <label price>ZAR 99.00</label>
           </ion-col>
           
           <ion-col>
-<<<<<<< HEAD
-            <img src="assets/images/iphone.jpg"/>
-=======
-            <img src = "assets/images/iphone.jpg"/>
->>>>>>> 97cf44c072d05c44688a1c76f3169e9c579f966d
-            <label>Over-Ear Wireless Headphones with Mic Red</label>
-            <label price>SAR 358.00</label>
+            <img src="assets/images/food1.png"/>
+            <label>Over-Red Grompies</label>
+            <label price>ZAR 58.00</label>
           </ion-col>
         </ion-row>
       </ion-grid>
