--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -23,7 +23,6 @@
         <ion-input type = "text" [(ngModel)]= "contact" name = "contact"></ion-input>
       </ion-item>
 
-
      <ion-item>
         <ion-label position="floating">Address</ion-label>
         <ion-textarea type = "text" [(ngModel)]= "address_loc" placeholder="Address" name = "address_loc"></ion-textarea>
@@ -36,7 +35,7 @@
 
       <ion-item>
         <ion-label  position="floating">Confirm Password</ion-label>
-        <ion-input type= "password"></ion-input>
+        <ion-input type= "password" [(ngModel)]= "conPassword"></ion-input>
       </ion-item>
 
       <ion-item>
