functioning pre-reg file changes

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
     
   </ion-toolbar>
       <ion-col>
-        <ion-icon name="menu-sharp" (click)="presentActionSheet()"></ion-icon>
+        <ion-icon name="menu-sharp" size="large"(click)="presentActionSheet()"></ion-icon>
       </ion-col>
   <ion-searchbar [(ngModel)] = "searchTerm"></ion-searchbar>
 
