--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
-    <ion-icon name="arrow-back-outline" (click)="backButton()"></ion-icon>
+    <ion-icon name="arrow-back-outline" size="large" (click)="backButton()"></ion-icon>
     <ion-title >Vendor Application</ion-title>
   </ion-toolbar>
 </ion-header>
