--- a/src/app/pages/remove-add-admin/remove-add-admin.page.html
+++ b/src/app/pages/remove-add-admin/remove-add-admin.page.html
@@ -1,10 +1,68 @@
-<ion-header>
+<ion-header ng-app="app">
   <ion-toolbar>
     <ion-title>RemoveAdmin</ion-title>
   </ion-toolbar>
+
+  <script>
+    app=angular.module('app',[]);
+    app.controller('MyCtrl',function($scope){
+
+      $scope.newUser={};
+
+      $scope.adminRemove=[
+
+      {name: 'Mary', email: 'maryzp@gmail.com',phone: "072 759 6153",address: '2427 Block L'},
+      {name: 'Sam', email: 'samp@gmail.com',phone: "031 589 1934",address: '2847 Block vv'},
+      {name: 'Saroon', email: 'saroonzp@gmail.com',phone: "071 379 6842",address: '4480 Block H'},
+
+      ];
+      $scope.addData=function(){
+        $scope.adminRemove.push($scope.newUser);
+        $scope.newUser={};
+        //$scope.inData="";
+      }
+      $scope.removeAdmin=function(selAdmin){
+        $scope.adminRemove.splice($scope.adminRemove.indexOf(selAdmin),1);
+      }
+    });
+  </script>
 </ion-header>
 
-<ion-content>
+<ion-content  ng-controller="MyCtrl">
+
+ <form>
+    <ion-item lines="full">
+      <ion-label position="floating">First name</ion-label>
+      <ion-input type="text"  ng-medel="newUser.name" required></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Restaurants</ion-label>
+      <ion-input type="text"  ng-medel="inData" required></ion-input>
+    </ion-item>
+
+
+    <ion-item lines="full">
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="text"  ng-medel="newUser.email" required></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Phone</ion-label>
+      <ion-input type="text" ng-model="newUser.phone"required></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Address</ion-label>
+      <ion-input type="text"  ng-medel="newUser.address" required></ion-input>
+    </ion-item>
+
+    <ion-row>
+      <ion-col>
+        <ion-button type="submit" color="success" expand="block" ng-click="addData()">Add Admin</ion-button>
+      </ion-col>
+    </ion-row>
+  </form>
 <!--table header-->
     <ion-row   style='background-color:rgb(226, 95, 95)'>
       <ion-col size="2">
@@ -28,21 +86,25 @@
       </ion-col>
     </ion-row>
 <!--table data-->
-    <ion-row *ngFor="let admin of adminRemove" style='background-color:rgb(194, 162, 22)'>
+    <ion-row  *ngFor="let admin of adminRemove" style='background-color:rgb(194, 162, 22)'>
       <ion-col size="2">
-        {{admin.name}}
+       {{admin.name}}
+      
       </ion-col>
 
       <ion-col size="2">
-        {{admin.email}}
+       {{admin.email}}
+      
       </ion-col>
 
       <ion-col size="2">
-        {{admin.phone}} 
+      {{admin.phone}} 
+    
       </ion-col>
 
       <ion-col size="2">
-        {{admin.address}}
+      {{admin.address}}
+    
       </ion-col>
 
       <ion-col size="2">
