--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -110,7 +110,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img src="/assets/images/food2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -123,7 +123,7 @@
 
         <ion-row> <!--This is just one row with mulitiple columns-->
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img src="/assets/images/food3.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -134,7 +134,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/food4.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -144,7 +144,7 @@
           </ion-col>
        
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/food5.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -156,7 +156,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/food6.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -169,7 +169,7 @@
 
         <ion-row> <!--This is just one row with mulitiple columns-->
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/kota.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -180,7 +180,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/kota1.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -191,7 +191,7 @@
        
        
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/kota2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -203,7 +203,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/kota3.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -216,7 +216,7 @@
 
         <ion-row> <!--This is just one row with mulitiple columns-->
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img class = "back-image" src="/assets/images/kota4.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -227,7 +227,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img src="/assets/images/kota5.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -237,7 +237,7 @@
           </ion-col>
        
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img src="/assets/images/logo2.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
@@ -249,7 +249,7 @@
           </ion-col>
 
           <ion-col size=12 size-lg=3 size-md=4 size-sm=6 size-xs=12 *ngFor="let item of [1]; let i = index">
-            <ion-card (click)="gotoMenu()">
+            <ion-card (click)="gotoMenu1()">
               <ion-img src="/assets/images/food6.jpg"></ion-img>
               <ion-card-content>
                 <ion-card-title>Mamas Kitchen</ion-card-title>
