--- a/src/app/pages/singupcust/singupcust.page.html
+++ b/src/app/pages/singupcust/singupcust.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
     <ion-icon name="arrow-black" (click)="backButton()"></ion-icon>
+    <ion-icon name="arrow-back-outline" size="large" (click)="backButton()"></ion-icon>
     <ion-title>Customer Signup</ion-title>
   </ion-toolbar>
 </ion-header>
